--- a/src/main/webapp/Template.xhtml
+++ b/src/main/webapp/Template.xhtml
@@ -19,9 +19,11 @@
       <h5 class="my-0 mr-md-auto font-weight-normal">Simplefaces Autocomplete</h5>
       
        <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2" href="/simplefaces-showcase-war/faces/autocomplete_simple.xhtml">Showcase</a>
-        <a class="p-2" href="/simplefaces-showcase-war/faces/reference.xhtml">Reference Documentation</a>
-        <a class="p-2" href="https://github.com/pkostop/autocomplete">GitHub Repository</a>               
+        <a class="p-2" href="autocomplete_simple.xhtml">Showcase</a>
+        <a class="p-2" href="reference.xhtml">Reference Documentation</a>
+        <a class="p-2" href="https://github.com/pkostop/autocomplete">Component GitHub Repository</a>               
+        <a class="p-2" href="https://github.com/pkostop/simplefaces-showcase-war">ShowCase GitHub Repository</a>
+        <a class="p-2" href="autocomplete.jar">Download</a>
       </nav>
       
     </div>
