--- a/src/main/webapp/autocomplete_simple.xhtml
+++ b/src/main/webapp/autocomplete_simple.xhtml
@@ -16,7 +16,7 @@
 		    <a class="nav-link active" href="#">Simple Example</a>
 		  </li>
 		  <li class="nav-item">
-		    <a class="nav-link " href="/simplefaces-showcase-war/faces/autocomplete.xhtml">Example with bean and converter</a>
+		    <a class="nav-link " href="autocomplete.xhtml">Example with bean and converter</a>
 		  </li>
 	  </ul>
 	<div class="tab-content" id="tabcontent" style="margin:20px">
