--- a/src/main/webapp/reference.xhtml
+++ b/src/main/webapp/reference.xhtml
@@ -82,7 +82,7 @@
 					</tr>
 					<tr>
 						<td>size</td>
-						<td></td>
+						<td>Maximum number of characters allowed to enter</td>
 					</tr>
 					<tr>
 						<td>readonly</td>
