--- a/src/main/webapp/autocomplete.xhtml
+++ b/src/main/webapp/autocomplete.xhtml
@@ -12,7 +12,7 @@
 
 <ul class="nav nav-tabs">
 		  <li class="nav-item">
-		    <a class="nav-link " href="/simplefaces-showcase-war/faces/autocomplete_simple.xhtml">Simple Example</a>
+		    <a class="nav-link " href="autocomplete_simple.xhtml">Simple Example</a>
 		  </li>
 		  <li class="nav-item">
 		    <a class="nav-link active" href="#">Example with bean and converter</a>
